# Scrapping-Data-for-Sentiment-JKN-Mobile-BPJS-Kesehatan-

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
app/: main.py
app/db/: __init__.py  supabase.py
app/models/: review.py
app/routers/: reviews.py  scraper.py
app/services/: __init__.py  scraper.py  sentiment.py
dashboard/: app.py
dashboard/components/: charts.py  export.py
scripts/: keep_alive.py
