[project]
name = "jkn-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "google-play-scraper>=1.2.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
