[project]
name = "jkn-sentiment"
version = "1.0.0"
description = "Scraper & Sentiment Analyzer — Ulasan Mobile JKN (BPJS Kesehatan)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Raynaldi", email = "raynss455x@gmail.com" }
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "supabase>=2.7.0",
  "google-play-scraper>=1.2.7",
  "transformers>=4.44.0",
  "torch>=2.3.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "streamlit>=1.38.0",
  "plotly>=5.24.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]
